--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <li class="benefits-item">
                     <div class="benefits-item-block">
                         <svg width="64" height="64">
-                            <use href="./images/symbol-defs.svg#icon-antenna"></use>
+                            <use href="./images/icons.svg#icon-antenna"></use>
                         </svg>
                     </div>
                     <h3 class="benefits-item-subtitle">Strategy</h3>
@@ -63,7 +63,7 @@
                 <li class="benefits-item">
                     <div class="benefits-item-block">
                         <svg width="64" height="64">
-                            <use href="./images/symbol-defs.svg#icon-clock"></use>
+                            <use href="./images/icons.svg#icon-clock"></use>
                         </svg>
                     </div>
                     <h3 class="benefits-item-subtitle">Punctuality</h3>
@@ -76,7 +76,7 @@
                 <li class="benefits-item">
                     <div class="benefits-item-block">
                         <svg width="64" height="64">
-                            <use href="./images/symbol-defs.svg#icon-diagram"></use>
+                            <use href="./images/icons.svg#icon-diagram"></use>
                         </svg>
                     </div>
                     <h3 class="benefits-item-subtitle">Diligence</h3>
@@ -89,7 +89,7 @@
                 <li class="benefits-item">
                     <div class="benefits-item-block">
                         <svg width="64" height="64">
-                            <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                            <use href="./images/icons.svg#icon-astronaut"></use>
                         </svg>
                     </div>
                     <h3 class="benefits-item-subtitle">Technologies</h3>
@@ -132,38 +132,31 @@
                     <ul class="team-soc">
                         <li class="team-soc-item">
                         <a class="team-soc-link link" href="" aria-label="instagram">
-                            <span>
                             <svg class="team-soc-icon" width="24" height="24">
-                                <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
-                            </span>
                         </a>
                         </li>
                         <li class="team-soc-item">
                         <a class="team-soc-link link" href="" aria-label="twitter">
-                            <span>
+                            
                             <svg class="team-soc-icon" width="24" height="24">
-                                 <use href="./images/symbol-defs.svg#icon-twitter"></use>
-                            </svg> 
-                            </span>
+                                 <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
                         </a>
                         </li>
                         <li class="team-soc-item">
                         <a class="team-soc-link link" href="" aria-label="facebook">
-                            <span>
                             <svg class="team-soc-icon" width="24" height="24">
-                                <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>  
-                            </span>
                         </a>
                         </li>
                         <li class="team-soc-item">
                         <a class="team-soc-link link" href="" aria-label="linkedin">
-                            <span>
                             <svg class="team-soc-icon" width="24" height="24">
-                                <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-                            </svg>  
-                            </span>        
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>        
                         </a>
                         </li>
                     </ul> 
@@ -177,38 +170,30 @@
                     <ul class="team-soc">
                         <li class="team-soc-item">
                         <a class="team-soc-link link" href="" aria-label="instagram">
-                            <span>
                             <svg class="team-soc-icon" width="24" height="24">
-                                <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
-                            </span>
                         </a>
                         </li>
                         <li class="team-soc-item">
                         <a class="team-soc-link link" href="" aria-label="twitter">
-                            <span>
                             <svg class="team-soc-icon" width="24" height="24">
-                                 <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg> 
-                            </span>
                         </a>
                         </li>
                         <li class="team-soc-item">
                         <a class="team-soc-link link" href="" aria-label="facebook">
-                            <span>
                             <svg class="team-soc-icon" width="24" height="24">
-                                <use href="./images/symbol-defs.svg#icon-facebook"></use>
-                            </svg>  
-                            </span>
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg> 
                         </a>
                         </li>
                         <li class="team-soc-item">
                         <a class="team-soc-link link" href="" aria-label="linkedin">
-                            <span>
                             <svg class="team-soc-icon" width="24" height="24">
-                                <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-                            </svg>  
-                            </span>        
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>     
                         </a>
                         </li>
                     </ul> 
@@ -222,38 +207,30 @@
                     <ul class="team-soc">
                         <li class="team-soc-item">
                         <a class="team-soc-link link" href="" aria-label="instagram">
-                            <span>
                             <svg class="team-soc-icon" width="24" height="24">
-                                <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
-                            </span>
                         </a>
                         </li>
                         <li class="team-soc-item">
                         <a class="team-soc-link link" href="" aria-label="twitter">
-                            <span>
                             <svg class="team-soc-icon" width="24" height="24">
-                                 <use href="./images/symbol-defs.svg#icon-twitter"></use>
-                            </svg> 
-                            </span>
+                                 <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
                         </a>
                         </li>
                         <li class="team-soc-item">
                         <a class="team-soc-link link" href="" aria-label="facebook">
-                            <span>
                             <svg class="team-soc-icon" width="24" height="24">
-                                <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>  
-                            </span>
                         </a>
                         </li>
                         <li class="team-soc-item">
                         <a class="team-soc-link link" href="" aria-label="linkedin">
-                            <span>
                             <svg class="team-soc-icon" width="24" height="24">
-                                <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-                            </svg>  
-                            </span>        
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>       
                         </a>
                         </li>
                     </ul> 
@@ -267,38 +244,30 @@
                     <ul class="team-soc">
                         <li class="team-soc-item">
                         <a class="team-soc-link link" href="" aria-label="instagram">
-                            <span>
                             <svg class="team-soc-icon" width="24" height="24">
-                                <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
-                            </span>
                         </a>
                         </li>
                         <li class="team-soc-item">
                         <a class="team-soc-link link" href="" aria-label="twitter">
-                            <span>
                             <svg class="team-soc-icon" width="24" height="24">
-                                 <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg> 
-                            </span>
                         </a>
                         </li>
                         <li class="team-soc-item">
                         <a class="team-soc-link link" href="" aria-label="facebook">
-                            <span>
                             <svg class="team-soc-icon" width="24" height="24">
-                                <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>  
-                            </span>
                         </a>
                         </li>
                         <li class="team-soc-item">
                         <a class="team-soc-link link" href="" aria-label="linkedin">
-                            <span>
                             <svg class="team-soc-icon" width="24" height="24">
-                                <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-                            </svg>  
-                            </span>        
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>   
                         </a>
                         </li>
                     </ul>
@@ -313,56 +282,44 @@
             <ul class="customers-list">
                 <li class="customers-item">
                     <a href="" class="customers-item-link link">
-                    <span>
                     <svg class="customers-item-icon" width="104" height="56">
-                        <use href="./images/symbol-defs.svg#icon-customers-icon1"></use>
+                        <use href="./images/icons.svg#icon-customers-icon1"></use>
                     </svg>
-                    </span>
                     </a>
                 </li>
                 <li class="customers-item">
                     <a href="" class="customers-item-link link">
-                    <span>
                     <svg class="customers-item-icon" width="104" height="56">
-                        <use href="./images/symbol-defs.svg#icon-customers-icon2"></use>
+                        <use href="./images/icons.svg#icon-customers-icon2"></use>
                     </svg>
-                    </span>
                     </a>
                 </li>
                 <li class="customers-item">
                     <a href="" class="customers-item-link link">
-                    <span>
                     <svg class="customers-item-icon" width="104" height="56">
-                        <use href="./images/symbol-defs.svg#icon-customers-icon3"></use>
+                        <use href="./images/icons.svg#icon-customers-icon3"></use>
                     </svg>
-                    </span>
                     </a>
                 </li>
                 <li class="customers-item">
                     <a href="" class="customers-item-link link">
-                    <span>
                     <svg class="customers-item-icon" width="104" height="56">
-                        <use href="./images/symbol-defs.svg#icon-customers-icon4"></use>
+                        <use href="./images/icons.svg#icon-customers-icon4"></use>
                     </svg>
-                    </span>
                     </a>
                 </li>
                 <li class="customers-item">
                     <a href="" class="customers-item-link link">
-                    <span>
                     <svg class="customers-item-icon" width="104" height="56">
-                        <use href="./images/symbol-defs.svg#icon-customers-icon5"></use>
+                        <use href="./images/icons.svg#icon-customers-icon5"></use>
                     </svg>
-                    </span>
                     </a>
                 </li>
                 <li class="customers-item">
                     <a href="" class="customers-item-link link">
-                    <span>
                     <svg class="customers-item-icon" width="104" height="56">
-                        <use href="./images/symbol-defs.svg#icon-customers-icon6"></use>
+                        <use href="./images/icons.svg#icon-customers-icon6"></use>
                     </svg>
-                    </span>
                     </a>
                 </li>
             </ul>
@@ -372,49 +329,43 @@
 
     <footer class="footer">
         <div class="container footer-container">
-        <a href="./index.html" class="footer-logo link">WEB<span class="footer-logo-accent">Studio</span></a>
-        <p class="footer-text">
+            <div class="footer-logo-text"> 
+            <a href="./index.html" class="footer-logo link">WEB<span class="footer-logo-accent">Studio</span></a>
+            <p class="footer-text">
             Increase the flow of customers and
             sales for your business with
             digital marketing & growth solutions.
-        </p>
+            </p>
+            </div>
         <div class="footer-soc">
         <p class="footer-soc-text">Social media</p>
         <ul class="footer-soc-list">
             <li class="footer-soc-item">
                 <a class="footer-soc-link link" href="" aria-label="instagram">
-                <span>
                 <svg class="footer-soc-icon" width="24" height="24">
-                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
-                </svg> 
-                </span>       
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>   
                 </a>
             </li>
             <li class="footer-soc-item">
                 <a class="footer-soc-link link" href="" aria-label="twitter">
-                <span>
                     <svg class="footer-soc-icon" width="24" height="24">
-                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
-                </svg>        
-                </span>
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>       
                 </a>
             </li>
             <li class="footer-soc-item">
                 <a class="footer-soc-link link" href="" aria-label="facebook">
-                <span>
                     <svg class="footer-soc-icon" width="24" height="24">
-                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
-                </svg> 
-                </span>       
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>        
                 </a>
             </li>
             <li class="footer-soc-item">
                 <a class="footer-soc-link link" href="" aria-label="linkedin">
-                <span>
                     <svg class="footer-soc-icon" width="24" height="24">
-                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-                </svg>        
-                </span>
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>       
                 </a>
             </li>
         </ul>
@@ -425,7 +376,7 @@
         <div class="modal">
             <button type="button" class="modal-btn" data-modal-close>
                 <svg class="icon-close-black" width="8" height="8">
-                    <use href="./images/symbol-defs.svg#icon-close-black"></use>
+                    <use href="./images/icons.svg#icon-close-black"></use>
                 </svg>
             </button>
         </div>
