--- a/portfolio.html
+++ b/portfolio.html
@@ -191,49 +191,43 @@
 
     <footer class="footer">
         <div class="container footer-container">
-        <a href="./index.html" class="footer-logo link">WEB<span class="footer-logo-accent">Studio</span></a>
-        <p class="footer-text">
+            <div class="footer-logo-text"> 
+            <a href="./index.html" class="footer-logo link">WEB<span class="footer-logo-accent">Studio</span></a>
+            <p class="footer-text">
             Increase the flow of customers and
             sales for your business with
             digital marketing & growth solutions.
-        </p>
+            </p>
+            </div>
         <div class="footer-soc">
         <p class="footer-soc-text">Social media</p>
         <ul class="footer-soc-list">
             <li class="footer-soc-item">
                 <a class="footer-soc-link link" href="" aria-label="instagram">
-                <span>
                 <svg class="footer-soc-icon" width="24" height="24">
-                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
-                </svg> 
-                </span>       
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>   
                 </a>
             </li>
             <li class="footer-soc-item">
                 <a class="footer-soc-link link" href="" aria-label="twitter">
-                <span>
                     <svg class="footer-soc-icon" width="24" height="24">
-                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
-                </svg>        
-                </span>
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>       
                 </a>
             </li>
             <li class="footer-soc-item">
                 <a class="footer-soc-link link" href="" aria-label="facebook">
-                <span>
                     <svg class="footer-soc-icon" width="24" height="24">
-                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
-                </svg> 
-                </span>       
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>        
                 </a>
             </li>
             <li class="footer-soc-item">
                 <a class="footer-soc-link link" href="" aria-label="linkedin">
-                <span>
                     <svg class="footer-soc-icon" width="24" height="24">
-                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-                </svg>        
-                </span>
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>       
                 </a>
             </li>
         </ul>
